[gd_scene load_steps=2 format=3 uid="uid://xuux1226y4dn"]

[ext_resource type="Script" path="res://new_src/objects/job_list_item/job_item.gd" id="1_a44n5"]

[node name="job_item" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -619.0
offset_bottom = -639.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a44n5")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 8.55

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="job_name" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Job Name: "

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="salary" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Salary:"

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="job_level" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Job Level: %s"

[node name="ProgressBar" type="ProgressBar" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.85

[node name="apply" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "apply
"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="button_up" from="HBoxContainer/apply" to="." method="_on_apply_button_up"]
[connection signal="mouse_entered" from="HBoxContainer/apply" to="." method="_on_apply_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/apply" to="." method="_on_apply_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
